[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_tour_ru"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_tour/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.force-include]
"jupyterlab_tour/labextension/package.json" = "jupyterlab_tour_ru.data/data/share/jupyter/labextensions/jupyterlab-tour/package.json"
"jupyterlab_tour/labextension/schemas" = "jupyterlab_tour_ru.data/data/share/jupyter/labextensions/jupyterlab-tour/schemas"
"jupyterlab_tour/labextension/static" = "jupyterlab_tour_ru.data/data/share/jupyter/labextensions/jupyterlab-tour/static"
"install.json" = "jupyterlab_tour_ru.data/data/share/jupyter/labextensions/jupyterlab-tour/install.json"

[tool.hatch.build.hooks.version]
path = "jupyterlab_tour/_version.py"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
